plugins {
    id 'java'
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id "org.sonarqube" version "4.4.1.3373"
}

sonar {
    properties {
        property "sonar.projectKey", "sashkagr_MediaWiki"
        property "sonar.organization", "sashkagr-1"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

group 'org.example'
version '1.0-SNAPSHOT'
sourceCompatibility= '19'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.json:json:20211205'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'mysql:mysql-connector-java:8.0.27'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.3'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.3'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    implementation 'org.slf4j:slf4j-api:1.7.32'
    implementation 'org.apache.logging.log4j:log4j-api:2.6.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.6.1'
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.87'
    implementation 'ch.qos.logback:logback-classic:1.2.3'

}

